# glm-vision

./: .env.example  .gitignore  CLAUDE.md  README.md  fastmcp.json  package.json  pyproject.toml
requirements/: base.txt  dev.txt  prod.txt
src/: __init__.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  file_service.py
src/types/: __init__.py  errors.py
tests/: __init__.py
